# censorbot

./: .dockerignore  .env.example  Dockerfile  README.md  bot.py  censor.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py
dashboard/static/: style.css
dashboard/templates/: base.html  events.html  guilds.html  login.html  settings.html
tests/: conftest.py  test_censor.py  test_db.py
